Revision history for Perl extension ExtUtils::CBuilder.

 - Fixed extra_compiler_flags on Windows, they were being
   ignored. [Robert May]

0.21 - Tue Oct 30 06:46:01 2007

 - Clean up perl_src path using Cwd::realpath().  Only affects usage
   as part of the perl core.

 - Protect $., $@, $!, $^E, and $? from any clobbering that might
   occur in our DESTROY method. [Zefram]

 - From bleadperl, a patch to clean up debug symbol files (.pdb for
   VC++, .tds for BCC) when running have_compiler(). [Steve Hay &
   Steve Peters]

0.19 - Sun May 13 14:29:18 2007

 - When building as part of the perl core (so this is irrelevant for
   people downloading from CPAN) we now try a little harder to find
   the perl sources. [Jos Boumans]

 - Fixed a part of the manifest thingy that got broken on 64-bit
   Windows platforms in version 0.18. [Steve Hay, Jan Dubois]

0.18 - Mon Mar 26 21:29:09 2007

 - Various OS/2 fixes:
   + Put .LIB file near .DEF file
   + Got library-file building working better
   + Handled libperl_overrides better
   [Ilya Zakharevich]

 - On Windows: embed manifest files in DLLs built with Module-Build
   when using VC8. [Steve Hay]

 - Added a workaround for a config error on dec_osf: the linker is
   $Config{cc}, not $Config{ld}. [Jarkko Hietaniemi]

 - Borland's compiler "response files" will not pass through macro
   definitions that contain quotes. The quotes get stripped and there
   seems to be no way to escape them. So we leave macros on the
   command line. [Randy W. Sims]

0.18  Sat Mar 25 13:35:47 CST 2006

 - Yet more fixes for arg_defines() on VMS. [Craig A. Berry and John
   E. Malmberg]

0.17  Wed Mar 15 22:46:15 CST 2006

 - When we're being run from an uninstalled perl distribution
   (e.g. one that's in the process of being built and tested), we
   search for perl first in the current working directory. [Randy
   Sims]

 - More fixing of the arg_defines() method on VMS. [Craig A. Berry and
   John E. Malmberg]
